--- a/express/public/stylesheets/style.css
+++ b/express/public/stylesheets/style.css
@@ -3,6 +3,19 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
-a {
-  color: #00B7FF;
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+input {
+  font-size: 16px;
+  padding: 4px;
+}
+
+button {
+  font-size: 16px;
+  padding: 8px;
+  cursor: pointer;
 }
